<resources>
    <string name="app_name">Chat App</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_new_account">Create new Account ?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
</resources>